form styling, inputs done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 	<link rel="stylesheet" type="text/css" href="dist/styles.css">
 </head>
 <body>
-	
+	<form action="" method="POST" name="LoginForm" class="form form__login">
+		<fieldset>		
+			<label class="form__login--label">
+				<input type="text" name="txtUserName" class="textbox">
+			</label>
+			<label class="form__login--label">
+				<input type="password" name="txtPassword" class="textbox">
+			</label>
+		</fieldset>
+		<footer>
+			<a href="#">Register</a>
+			<button type="submit">Log In</button>
+		</footer>
+	</form>
 </body>
 </html>
